# fastbreak

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: implement-feature.md  release.md  verify-spec.md
docs/: phase-integration-analysis.md  phase10-nfrs.md  phase11-schema-composition.md  phase7-refinement-types.md  phase8-traceability.md  phase9-alternative-flows.md  spec-first-workflow.md  spec-verification.md
examples/: README.md
examples/01-types/: 01-basic-types.fbrk  02-enums.fbrk  03-type-aliases.fbrk  04-generics.fbrk  05-relations.fbrk  README.md
examples/02-state-machines/: 01-basic-state.fbrk  02-invariants.fbrk  03-actions.fbrk  04-contracts.fbrk  README.md
examples/03-scenarios/: 01-basic-scenario.fbrk  02-assertions.fbrk  03-alternatives.fbrk  README.md
examples/04-expressions/: 01-literals-operators.fbrk  02-collections.fbrk  03-quantifiers.fbrk  04-pattern-matching.fbrk  05-lambdas.fbrk  README.md
examples/05-properties/: 01-basic-properties.fbrk  02-temporal-properties.fbrk  README.md
examples/06-quality/: 01-basic-quality.fbrk  02-full-quality.fbrk  README.md
examples/07-modules/: 01-imports.fbrk  README.md  common.fbrk  users.fbrk
examples/08-attributes/: 01-attributes.fbrk  README.md
examples/fastbreak-spec/: fastbreak.toml
spec/: .gitignore  fastbreak.toml
spec/specs/: compiler.fbrk  main.fbrk
src/: lib.rs  main.rs
src/ast/: attribute.rs  expr.rs  mod.rs  property.rs  quality.rs  scenario.rs  state.rs  types.rs
src/cli/: commands.rs  mod.rs
src/codegen/: markdown.rs  mermaid.rs  mod.rs
(+18 files in other folders)
