[package]
name = "fastbreak"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Ryan O'Neill"]
description = "A formal methods-inspired specification language combining Alloy, TLA+, Cucumber, and Design by Contract"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ryanoneill/fastbreak"
homepage = "https://github.com/ryanoneill/fastbreak"
keywords = ["specification", "formal-methods", "documentation", "dsl", "verification"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "fastbreak"
path = "src/main.rs"

[lib]
name = "fastbreak"
path = "src/lib.rs"

[dependencies]
# Lexer
logos = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Data structures
indexmap = { version = "2", features = ["serde"] }
smol_str = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
